objects/APXTConga4__Conga_Solution__c.object
<CustomObject>
    <fields>
        <fullName>APXTConga4__Button_Link_API_Name__c</fullName>
        <label>Button/Link API Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Button_body_field__c</fullName>
        <label>Button Body (URL)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Composer_Parameters__c</fullName>
        <label>Composer Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__CongaEmailTemplateCount__c</fullName>
        <label>Conga Email Template Count</label>
        <summaryForeignKey>APXTConga4__Conga_Solution_Email_Template__c.APXTConga4__Conga_Solution__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Custom_Object_Id__c</fullName>
        <label>Custom Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Formula_Field_API_Name__c</fullName>
        <label>Formula Field API Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Formula_body_field__c</fullName>
        <label>Formula Field Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Is_Quick_Start__c</fullName>
        <label>Is Quick Start</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Launch_C8_Formula_Button__c</fullName>
        <formula>IF( OR(APXTConga4__Sample_Record_Id__c = &quot;&quot;,  APXTConga4__Button_Link_API_Name__c = &quot;&quot;), IMAGE( &quot;/resource/APXTConga4__DisabledLaunchButton&quot; , &quot;Launch Composer&quot;), 

HYPERLINK(&quot;https://&quot; &amp; MID( $Api.Enterprise_Server_URL_320, FIND(&quot;://&quot;, $Api.Enterprise_Server_URL_100)+3, FIND( &quot;.com&quot;, $Api.Enterprise_Server_URL_100 )-4) 
&amp; &quot;servlet/servlet.Integration?lid=&quot; &amp; APXTConga4__Weblink_Id__c 
&amp; &quot;&amp;eid=&quot; &amp; APXTConga4__Sample_Record_Id__c &amp; &quot;&amp;ic=1&quot; 
, IMAGE( &quot;/resource/APXTConga4__ComposerLaunchButton&quot; , &quot;Launch Composer&quot;), &quot;_blank&quot; ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Master_Object_Type_Validator__c</fullName>
        <label>Master Object Type Validator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Master_Object_Type__c</fullName>
        <label>Master Object Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Sample_Record_Id__c</fullName>
        <label>Sample Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Sample_Record_Name__c</fullName>
        <label>Sample Record Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Solution_Description__c</fullName>
        <label>Solution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Solution_Weblink_Syntax__c</fullName>
        <label>Solution Weblink Syntax</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Weblink_Id__c</fullName>
        <label>Weblink Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Conga Solution</label>
    <listViews>
        <fullName>APXTConga4__All</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Master_Object_Type__c</columns>
        <columns>APXTConga4__Button_Link_API_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conga Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>